refactor: JPA Entity 생성자 변경 (KGU-13)
JPA Entity의 생성자를 캡슐화되도록 protected와 private으로 변경했습니다.